Fix word wrap in post body

--- a/static/style.css
+++ b/static/style.css
@@ -185,7 +185,8 @@ textarea::placeholder,
 }
 
 #ogTitle,
-#ogDescription {
+#ogDescription,
+.post-body {
   word-break: break-word;
   overflow-wrap: anywhere;
 }
